<resources>
    <string name="app_name">Banco de Contraseñas</string>
    <string name="canalServRespaldo">Canal del Servicio de Respaldo</string>
    <string name="canalGeneral">Canal General</string>
    <string name="canalMenorImportancia">Canal de Menor Importancia</string>
    <string name="cerrarAppTitulo">Cerrar la Aplicación</string>
    <string name="cerrarAppMensaje">Está a punto de cerrar la aplicación, ¿Desea continuar?</string>
    <string name="cerrarSesionTitulo">Cerrar Sesión</string>
    <string name="cerrarSesionMensaje">Está a punto de cerrar sesión, ¿Desea continuar?</string>
    <string name="bienvenida">Bienvenido al Banco de Contraseñas</string>
    <string name="instruccionCreacion">Para comenzar a usar la aplicación, deberá crear su Llave Maestra, la cual será utilizada para acceder a la aplicación y cifrar los datos sensibles.\n\n¡Es muy importante que no olvide su Llave Maestra, y que la mantenga segura de posibles intrusos!</string>
    <string name="introNuevaLlave">Introduzca su nueva llave:</string>
    <string name="nuevaLlave">Nueva Llave Maestra</string>
    <string name="reintroNuevaLlave">Reintroduzca su nueva llave:</string>
    <string name="crearLlaveMaestra">¡Crear Llave Maestra!</string>
    <string name="creandoLlaveMaestra">Creando Llave Maestra…</string>
    <string name="importDatos">Importar Datos - Opcional</string>
    <string name="descripRespaldo">Si ya ha usado Banco de Contraseñas con anterioridad, y desea cargar su respaldo creado en Google Drive\n¡Este es el lugar para ello!</string>
    <string name="cuentaSelec">Cuenta Seleccionada</string>
    <string name="borrarCuenta" >Borrar Cuenta</string>
    <string name="clickSelecCuenta">Click para seleccionar una cuenta</string>
    <string name="introLlaveResp">Introduzca la llave maestra del respaldo:</string>
    <string name="llaveResp">Llave Maestra del Respaldo</string>
    <string name="inicioSesionDriveFallido">Falló la conexión con Google Drive.</string>
    <string name="falloDescargaRespaldo">Falló la descarga del respaldo de Google Drive</string>
    <string name="respaldoNoEncontrado">No se encontró el respaldo de Google Drive</string>
    <string name="llaveMaestraRespIncorrecta">La Llave Maestra del respaldo no es correcta, favor ingresarla de nuevo.</string>
    <string name="llaveCreadaTitulo">¡Llave Creada!</string>
    <string name="llaveCreadaMensaje">Su Llave Maestra fue creada exitosamente.</string>
    <string name="llaveCreadoYRespaldoCargado">Su Llave Maestra fue creada exitosamente, y su respaldo fue cargado correctamente.</string>
    <string name="cargarRespaldoIniciado">Se dio por iniciado el proceso de carga de respaldo, revise sus notificaciones para ver el progreso.</string>
    <string name="introLlaveMaestra">Introduzca su Llave Maestra</string>
    <string name="contrasenna">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrasennaVencida">Contraseña Caducada</string>
    <string name="detalleContrasennaVencida">La contraseña de su cuenta \"%1$s\" ha caducado, se recomienda su actualización.</string>
    <string name="detalleContrasennaVencidaConOtras">La contraseña de su cuenta \"%1$s\", junto a otras %2$s contraseñas, se encuentra caducada, se recomienda su actualización.</string>
    <string name="llaveRequeridaTitulo">Llave Maestra Requerida</string>
    <string name="llaveRequeridaMensaje">Se requiere el ingreso de su Llave Maestra para el inicio de sesión.</string>
    <string name="llaveIncorrectaTitulo">Llave Maestra Incorrecta</string>
    <string name="llaveIncorrectaMensaje">La Llave Maestra ingresada no es correcta, favor intentar de nuevo.</string>
    <string name="listaCuentas">Lista de Cuentas</string>
    <string name="contrCaducada">Contraseña Sin Actualizar</string>
    <string name="buscarCuenta">Buscar…</string>
    <string name="limpiarBusq">Limpiar</string>
    <string name="elimCuentaTitulo">Eliminación de Cuenta</string>
    <string name="elimCuentaMensaje">¿Está seguro que desea eliminar la cuenta %1$s?</string>
    <string name="elimCuentaExitosa">La cuenta fue eliminada exitosamente.</string>
    <string name="elimCuentaFallida">Hubo un error al eliminar la cuenta.</string>
    <string name="infoContVencTitulo">Contraseña Caducada</string>
    <string name="infoContVencMensaje">La contraseña de esta cuenta caducó, se recomienda su actualización.</string>
    <string name="detCuenta">Detalle de la Cuenta</string>
    <string name="nombreNoDefin">Error, nombre no definido</string>
    <string name="descripNoDefin">Error, descripción no definido</string>
    <string name="contraNoDefin">Error, contraseña no definido</string>
    <string name="contraCopiada">Se ha copiado la contraseña al portapapeles</string>
    <string name="clickParaCopiar">Click sobre la contraseña para\ncopiarla al portapapeles…</string>
    <string name="histCuenta">Historial de Cuenta</string>
    <string name="histDe">Historial de %1$s</string>
    <string name="elimHistTitulo">Eliminación del Historial</string>
    <string name="elimHistMensaje">¿Está seguro que desea eliminar el historial de la cuenta %1$s? Todas las contraseñas, excepto la última, serán removidas permanentemente.</string>
    <string name="elimHistExitosa">Su historial de contraseñas fue limpiado exitosamente.</string>
    <string name="elimHistSinContr">No hay contraseñas en el historial para limpiar.</string>
    <string name="elimHistFallida">Hubo un error al limpiar el historial de contraseñas.</string>
    <string name="agrEdtCuenta">Agregar/Editar una Cuenta</string>
    <string name="crearCuenta">Crear una Cuenta</string>
    <string name="editarCuenta">Editar una Cuenta</string>
    <string name="nombreCuenta">Nombre</string>
    <string name="descripCuenta">Descripción</string>
    <string name="mostOcultContr">Mostrar/Ocultar la contraseña</string>
    <string name="genContr">Generador de contraseñas\nMantenga apretado para cambiar la modalidad</string>
    <string name="contrCuenta">Contraseña</string>
    <string name="valCuenta">Validez</string>
    <string name="dias">Días</string>
    <string name="durInf">Para duración infinita: 0 días de validez.</string>
    <string name="categCuenta">Categorías</string>
    <string name="signoSuma">+</string>
    <string name="nuevaCategoria">Nueva Categoría</string>
    <string name="listCateg">Lista de Categorías</string>
    <string name="elimCategTitulo">Eliminación de una Categoría</string>
    <string name="elimCategMensaje">¿Está seguro que desea eliminar la categoría %1$s? Las cuentas asociadas no se eliminarán, pero ya no se relacionarán con esta categoría.</string>
    <string name="elimCategExitosa">La categoría fue eliminada exitosamente.</string>
    <string name="elimCategFallida">Hubo un error al eliminar la categoría.</string>
    <string name="detCategoria">Detalle de la Categoría</string>
    <string name="cuentasAsoc">Cuentas Asociadas</string>
    <string name="agrEdtCateg">Agregar/Editar una Categoría</string>
    <string name="crearCateg">Crear una Categoría</string>
    <string name="editCateg">Editar una Categoría</string>
    <string name="nombreCateg">Nombre</string>
    <string name="errorSinNombre">Error, debe ingresar un nombre para la categoría.</string>
    <string name="errorNombreReservado">Error, el nombre seleccionado está reservado por la aplicación.</string>
    <string name="errorNombreUsado">Error, el nombre seleccionado ya está siendo usado por otra categoría.</string>
    <string name="errorNoSePudoCrearCategoria">Error, no se pudo crear la categoría deseada.</string>
    <string name="errorNoSePudoEditarCategoria">Error, no se pudo modificar la categoría deseada.</string>
    <string name="categoriaCreada">Su categoría fue creada exitosamente.</string>
    <string name="categoriaEditada">Su categoría fue modificada exitosamente.</string>
    <string name="config">Configuración</string>
    <string name="datosInvalidos">Datos Inválidos</string>
    <string name="cambLlaveMaestra">Cambiar Llave Maestra</string>
    <string name="introLlaveActual">Introduzca su llave actual:</string>
    <string name="llaveActual">Llave Maestra Actual</string>
    <string name="introLlaveCamb">Introduzca su nueva llave:</string>
    <string name="llaveCambiada">Nueva Llave Maestra</string>
    <string name="reintroLlaveCamb">Reintroduzca su nueva llave:</string>
    <string name="errorLlaveReqTitulo">Llave Maestra Requerida</string>
    <string name="errorLlaveReqMensaje">Se requiere el ingreso de su Llave Maestra Actual para realizar el cambio.</string>
    <string name="errorLlaveIncTitulo">Llave Maestra Incorrecta</string>
    <string name="errorLlaveIncMensaje">La Llave Maestra Actual ingresada no es correcta, favor intentar de nuevo.</string>
    <string name="errorLlaveVaciaTitulo">Campo Vacío</string>
    <string name="errorLlaveVaciaMensaje">Para realizar el cambio se requiere el ingreso de su Nueva Llave Maestra.</string>
    <string name="errorLlaveCortaTitulo">Llave Muy Corta</string>
    <string name="errorLlaveCortaMensaje">La Nueva Llave Maestra elegida es muy corta, debería tener al menos %1$d caracteres.</string>
    <string name="errorLlaveNoCoincTitulo">No Coincidencia</string>
    <string name="errorLlaveNoCoincMensaje">No coinciden las Nuevas Llaves Maestras ingresadas, favor reingresar los datos.</string>
    <string name="errorLlaveUtilizTitulo">Llave Ya Utilizada</string>
    <string name="errorLlaveUtilizMensaje">La Nueva Llave Maestra debe ser distinta a la Llave Maestra Actual.</string>
    <string name="llaveMaestraActualizada">Su Llave Maestra fue actualizada exitosamente.</string>
    <string name="respDatos">Respaldar Datos</string>
    <string name="descripExport">Si desea respaldar sus datos en Google Drive\n¡Este es el lugar para ello!</string>
    <string name="cambiarCuenta">Para cambiar la cuenta seleccionada,\nhaga click sobre el nombre de la cuenta.</string>
    <string name="respCreadoExitosamente">¡Tu respaldo fue creado exitosamente!</string>
    <string name="creacionRespFallida">No se pudo crear su respaldo.</string>
    <string name="creandoRespaldoTitulo">Creando Respaldo</string>
    <string name="creandoRespaldoMensaje">Su respaldo está siendo creado, favor esperar…</string>
    <string name="debeSeleccionarCuenta">Debe seleccionar una cuenta antes de realizar el respaldo.</string>
    <string name="respaldoIniciado">Se dio por iniciado el proceso de respaldo, revise sus notificaciones para ver el progreso.</string>
    <string name="acercaDe">Acerca De</string>
    <string name="infoDesarrollo">Banco de Contraseñas\n
        Android Pie\n
        \n
        2017\n
        \n
        Ícono hecho por <a href="https://www.flaticon.com/authors/pixel-perfect">Pixel Perfect</a>\n
        de <a href="https://www.flaticon.com/">www.flaticon.com</a>
    </string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="menu">Menú</string>
    <string name="cuentas">Cuentas</string>
    <string name="categorias">Categorías</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca">Acerca De</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="submenu">SubMenú</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="agrCategoria">Agregar Categoría</string>
    <string name="habOrden">Habilitar Orden</string>
    <string name="cambiarLlave">Cambiar Llave Maestra</string>
    <string name="respaldar">Respaldar Datos</string>
    <string name="historial">Historial</string>
    <string name="resp">Respaldar</string>
    <string name="limpiar">Limpiar</string>
    <string name="titulo">Título</string>
    <string name="mensaje">Mensaje</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
</resources>