<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActividadPrincipal">
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu_white_24dp"
        android:title="@string/menu"
        app:showAsAction="always"
        android:orderInCategory="100">
        <menu>

            <item android:id="@+id/menu_accounts"
                android:icon="@drawable/ic_person_white_24dp"
                android:title="@string/cuentas"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_categories"
                android:icon="@drawable/ic_folder_white_24dp"
                android:title="@string/categorias"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_configuration"
                android:icon="@drawable/ic_build_white_24dp"
                android:title="@string/configuracion"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_about"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/acerca"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_logout"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/cerrarSesion"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>