<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_showMenu"
        android:icon="@drawable/baseline_arrow_drop_down_24"
        android:title="@string/submenu"
        app:showAsAction="always"
        android:orderInCategory="99">
        <menu>
            <item
                android:id="@+id/sub_menu_show_account_back"
                android:icon="@drawable/baseline_arrow_back_24"
                android:title="@string/volver"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_menu_show_account_edit"
                android:icon="@drawable/baseline_build_24"
                android:title="@string/editar"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_menu_show_account_delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="@string/eliminar"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_menu_show_account_record"
                android:icon="@drawable/baseline_history_24"
                android:title="@string/historial"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>