<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.theroot.passbank.fragmento.FragCrearLlaveMaestra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/bienvenida"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/instruccionCreacion"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/introNuevaLlave"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:gravity="center"
            android:hint="@string/nuevaLlave"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reintroNuevaLlave"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_newRepPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:gravity="center"
            android:hint="@string/nuevaLlave"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="17sp" />

        <Button
            android:id="@+id/B_crear_llave_maestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/crearLlaveMaestra"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/importDatos"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/descripRespaldo"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/cuentaSelec"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/IV_vaciar_usuario"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/borrarCuenta"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_close_24" />

            <EditText
                android:id="@+id/ET_cuenta_seleccionada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="@string/clickSelecCuenta"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/introLlaveResp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_respaldoLlaveMaestra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:gravity="center"
            android:hint="@string/llaveResp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="17sp" />

    </LinearLayout>
</ScrollView>