<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_showMenu"
        android:icon="@drawable/baseline_arrow_drop_down_24"
        android:title="@string/submenu"
        app:showAsAction="always"
        android:orderInCategory="99">
        <menu>
            <item
                android:id="@+id/sub_menu_add_edit_account_back"
                android:icon="@drawable/baseline_arrow_back_24"
                android:title="@string/volver"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_menu_add_edit_account_save"
                android:icon="@drawable/baseline_save_24"
                android:title="@string/guardar"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>