<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_showMenu"
        android:icon="@drawable/ic_arrow_drop_down_white_24dp"
        android:title="@string/submenu"
        app:showAsAction="always"
        android:orderInCategory="99">
        <menu>
            <item
                android:id="@+id/sub_menu_exportar_back"
                android:icon="@drawable/ic_arrow_back_white_24dp"
                android:title="@string/volver"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_menu_exportar_respaldar"
                android:icon="@drawable/ic_cloud_upload_white_24dp"
                android:title="@string/resp"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>