<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/TV_tituloAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/titulo"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <View
        style="@style/EstiloImageOriginalWhite"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/TV_mensajeAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/mensaje"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginBottom="10dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TR_contSiNoAlertDialog"
            android:weightSum="2">

            <Button
                android:id="@+id/B_noAlertDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />

            <Button
                android:id="@+id/B_siAlertDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/si" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/TR_contOkAlertDialog"
            android:weightSum="2">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/B_okAlertDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />

        </TableRow>
    </TableLayout>

</LinearLayout>